[gd_scene load_steps=5 format=2]

[ext_resource path="res://roboto54.tres" type="DynamicFont" id=1]
[ext_resource path="res://roboto36.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameOver.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.32549, 0.32549, 0.32549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 1021.0
margin_bottom = 597.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 978.0
margin_bottom = 554.0
custom_constants/separation = 45
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 34.0
margin_right = 938.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 1 )
text = "GAME OVER"
align = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 165.0
margin_right = 938.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 2 )
text = "SCORE: "
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 258.0
margin_right = 938.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 320.0
margin_right = 618.0
margin_bottom = 222.0
custom_constants/separation = 30

[node name="RetryButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 298.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "RETRY"

[node name="MainMenuButton2" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 298.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )
text = "  MAIN MENU  "

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 298.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 2 )
text = " QUIT "

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/MainMenuButton2" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
